Fix alignment of tags

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -156,6 +156,7 @@ header :is(h1, h2) a {
   background-color: lightgrey;
   border-radius: 1000px;
   padding-inline: 0.6em;
+  margin-top: 0;
 }
 
 @media screen and (max-width: 480px) {
